--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "node": "^14.4.0",
-    "passport": "^0.4.1"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"server": "nodemon index.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cookie-session": "^1.4.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.9.18",
+		"node": "^14.4.0",
+		"nodemon": "^2.0.4",
+		"passport": "^0.4.1",
+		"passport-google-oauth20": "^2.0.0"
+	}
 }
