--- a/package.json
+++ b/package.json
@@ -5,17 +5,24 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
-		"server": "nodemon index.js"
+		"server": "nodemon index.js",
+		"client": "npm run start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.19.0",
+		"concurrently": "^5.2.0",
 		"cookie-session": "^1.4.0",
 		"express": "^4.17.1",
 		"mongoose": "^5.9.18",
 		"node": "^14.4.0",
 		"nodemon": "^2.0.4",
 		"passport": "^0.4.1",
-		"passport-google-oauth20": "^2.0.0"
+		"passport-google-oauth20": "^2.0.0",
+		"path-parser": "^6.1.0",
+		"twilio": "^3.46.0"
 	}
 }
